--- a/texfiles/sources.bib
+++ b/texfiles/sources.bib
@@ -1,7 +1,7 @@
 @misc{CodeIntro2010Guruswami,
     author = {Guruswami, Venkatesan},
     title = {Introduction to Coding Theory},
-	year = {2010},
+    year = {2010},
     url = {http://www.cs.cmu.edu/~venkatg/teaching/codingtheory/notes/notes1.pdf},
 }
 
@@ -35,167 +35,182 @@
 }
 
 @article{PolynomialCodes2017MaddahAvestimehr,
-  author    = {Qian Yu and
-               Mohammad Ali Maddah{-}Ali and
-               Amir Salman Avestimehr},
-  title     = {Polynomial Codes: an Optimal Design for High-Dimensional Coded Matrix
-               Multiplication},
-  journal   = {CoRR},
-  volume    = {abs/1705.10464},
-  year      = {2017},
-  url       = {http://arxiv.org/abs/1705.10464},
-  archivePrefix = {arXiv},
-  eprint    = {1705.10464},
-  timestamp = {Wed, 14 Jun 2017 07:59:47 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/YuMA17a},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+    author    = {Qian Yu and
+    Mohammad Ali Maddah{-}Ali and
+    Amir Salman Avestimehr},
+    title     = {Polynomial Codes: an Optimal Design for High-Dimensional Coded Matrix
+    Multiplication},
+    journal   = {CoRR},
+    volume    = {abs/1705.10464},
+    year      = {2017},
+    url       = {http://arxiv.org/abs/1705.10464},
+    archivePrefix = {arXiv},
+    eprint    = {1705.10464},
+    timestamp = {Wed, 14 Jun 2017 07:59:47 +0200},
+    biburl    = {https://dblp.org/rec/bib/journals/corr/YuMA17a},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{HadamardZ2Z2012RioRifa,
-  author    = {{\'{A}}ngel del R{\'{\i}}o and
-               Josep Rif{\`{a}}},
-  title     = {Families of Hadamard Z2Z4Q8-codes},
-  journal   = {CoRR},
-  volume    = {abs/1211.5251},
-  year      = {2012},
-  url       = {http://arxiv.org/abs/1211.5251},
-  archivePrefix = {arXiv},
-  eprint    = {1211.5251},
-  timestamp = {Wed, 07 Jun 2017 14:42:53 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1211-5251},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+    author    = {{\'{A}}ngel del R{\'{\i}}o and
+    Josep Rif{\`{a}}},
+    title     = {Families of Hadamard Z2Z4Q8-codes},
+    journal   = {CoRR},
+    volume    = {abs/1211.5251},
+    year      = {2012},
+    url       = {http://arxiv.org/abs/1211.5251},
+    archivePrefix = {arXiv},
+    eprint    = {1211.5251},
+    timestamp = {Wed, 07 Jun 2017 14:42:53 +0200},
+    biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1211-5251},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{HadamardMatrices1978HedayatWallis,
- ISSN = {00905364},
- URL = {http://www.jstor.org/stable/2958712},
- author = {A. Hedayat and W. D. Wallis},
- journal = {The Annals of Statistics},
- number = {6},
- pages = {1184-1238},
- publisher = {Institute of Mathematical Statistics},
- title = {Hadamard Matrices and Their Applications},
- volume = {6},
- year = {1978}
+    ISSN = {00905364},
+    URL = {http://www.jstor.org/stable/2958712},
+    author = {A. Hedayat and W. D. Wallis},
+    journal = {The Annals of Statistics},
+    number = {6},
+    pages = {1184-1238},
+    publisher = {Institute of Mathematical Statistics},
+    title = {Hadamard Matrices and Their Applications},
+    volume = {6},
+    year = {1978}
 }
 
 @article{HadamardSearch1963GolombBaumert,
- ISSN = {00029890, 19300972},
- URL = {http://www.jstor.org/stable/2312777},
- author = {Solomon W. Golomb and Leonard D. Baumert},
- journal = {The American Mathematical Monthly},
- number = {1},
- pages = {12-17},
- publisher = {Mathematical Association of America},
- title = {The Search for Hadamard Matrices},
- volume = {70},
- year = {1963}
+    ISSN = {00029890, 19300972},
+    URL = {http://www.jstor.org/stable/2312777},
+    author = {Solomon W. Golomb and Leonard D. Baumert},
+    journal = {The American Mathematical Monthly},
+    number = {1},
+    pages = {12-17},
+    publisher = {Mathematical Association of America},
+    title = {The Search for Hadamard Matrices},
+    volume = {70},
+    year = {1963}
 }
 
 @article{HadamardCodingTheoretic1992AssmusKey,
- ISSN = {00029947},
- URL = {http://www.jstor.org/stable/2154164},
- author = {E. F. Assmus and J. D. Key},
- journal = {Transactions of the American Mathematical Society},
- number = {1},
- pages = {269-293},
- publisher = {American Mathematical Society},
- title = {Hadamard Matrices and Their Designs: A Coding-Theoretic Approach},
- volume = {330},
- year = {1992}
+    ISSN = {00029947},
+    URL = {http://www.jstor.org/stable/2154164},
+    author = {E. F. Assmus and J. D. Key},
+    journal = {Transactions of the American Mathematical Society},
+    number = {1},
+    pages = {269-293},
+    publisher = {American Mathematical Society},
+    title = {Hadamard Matrices and Their Designs: A Coding-Theoretic Approach},
+    volume = {330},
+    year = {1992}
 }
 
 @article{HadamardDesigns1972Spence,
- ISSN = {00029939, 10886826},
- URL = {http://www.jstor.org/stable/2038298},
- author = {Edward Spence},
- journal = {Proceedings of the American Mathematical Society},
- number = {1},
- pages = {29-31},
- publisher = {American Mathematical Society},
- title = {Hadamard Designs},
- volume = {32},
- year = {1972}
+    ISSN = {00029939, 10886826},
+    URL = {http://www.jstor.org/stable/2038298},
+    author = {Edward Spence},
+    journal = {Proceedings of the American Mathematical Society},
+    number = {1},
+    pages = {29-31},
+    publisher = {American Mathematical Society},
+    title = {Hadamard Designs},
+    volume = {32},
+    year = {1972}
 }
 
 @article{PolynomialDNA2013OztasSiap,
- ISSN = {03545180, 24060933},
- URL = {http://www.jstor.org/stable/24896375},
- author = {Elif Segah Oztas and Irfan Siap},
- journal = {Filomat},
- number = {3},
- pages = {459-466},
- publisher = {University of Nis, Faculty of Sciences and Mathematics},
- title = {Lifted Polynomials Over ${F}_{16}$ and Their Applications to DNA Codes},
- volume = {27},
- year = {2013}
+    ISSN = {03545180, 24060933},
+    URL = {http://www.jstor.org/stable/24896375},
+    author = {Elif Segah Oztas and Irfan Siap},
+    journal = {Filomat},
+    number = {3},
+    pages = {459-466},
+    publisher = {University of Nis, Faculty of Sciences and Mathematics},
+    title = {Lifted Polynomials Over ${F}_{16}$ and Their Applications to DNA Codes},
+    volume = {27},
+    year = {2013}
 }
 
 @article{CodesCiphers1010Baylis,
- ISSN = {00255572},
- URL = {http://www.jstor.org/stable/25759725},
- author = {John Baylis},
- journal = {The Mathematical Gazette},
- number = {531},
- pages = {412-425},
- publisher = {Mathematical Association},
- title = {Codes, not ciphers},
- volume = {94},
- year = {2010}
+    ISSN = {00255572},
+    URL = {http://www.jstor.org/stable/25759725},
+    author = {John Baylis},
+    journal = {The Mathematical Gazette},
+    number = {531},
+    pages = {412-425},
+    publisher = {Mathematical Association},
+    title = {Codes, not ciphers},
+    volume = {94},
+    year = {2010}
 }
 
 @article{CodesOrigins1978Pless,
- ISSN = {00029890, 19300972},
- URL = {http://www.jstor.org/stable/2321784},
- author = {Vera Pless},
- journal = {The American Mathematical Monthly},
- number = {2},
- pages = {90-94},
- publisher = {Mathematical Association of America},
- title = {Error Correcting Codes: Practical Origins and Mathematical Implications},
- volume = {85},
- year = {1978}
+    ISSN = {00029890, 19300972},
+    URL = {http://www.jstor.org/stable/2321784},
+    author = {Vera Pless},
+    journal = {The American Mathematical Monthly},
+    number = {2},
+    pages = {90-94},
+    publisher = {Mathematical Association of America},
+    title = {Error Correcting Codes: Practical Origins and Mathematical Implications},
+    volume = {85},
+    year = {1978}
 }
 
 @article{BooleRecords1956Kneale,
- ISSN = {00359149},
- URL = {http://www.jstor.org/stable/530792},
- author = {W. Kneale},
- journal = {Notes and Records of the Royal Society of London},
- number = {1},
- pages = {53-63},
- publisher = {The Royal Society},
- title = {Boole and the Algebra of Logic},
- volume = {12},
- year = {1956}
+    ISSN = {00359149},
+    URL = {http://www.jstor.org/stable/530792},
+    author = {W. Kneale},
+    journal = {Notes and Records of the Royal Society of London},
+    number = {1},
+    pages = {53-63},
+    publisher = {The Royal Society},
+    title = {Boole and the Algebra of Logic},
+    volume = {12},
+    year = {1956}
 }
 
 @inproceedings{DegeneracyHadamard2008Petoukhov,
-  title = {The degeneracy of the genetic code and Hadamard matrices},
-  author = {Sergey V. Petoukhov},
-  year = {2008},
-  URL = {https://arxiv.org/pdf/0802.3366.pdf},
+    title = {The degeneracy of the genetic code and Hadamard matrices},
+    author = {Sergey V. Petoukhov},
+    year = {2008},
+    URL = {https://arxiv.org/pdf/0802.3366.pdf},
 }
 
 @article{MultilevelConstruction2008TrinhFan,
- author = {Trinh, Q.K. and Fan, Pingzhi},
- year = {2008},
- month = {11},
- pages = {1250 - 1252},
- title = {Construction of multilevel Hadamard matrices with small alphabet},
- volume = {44},
- booktitle = {Electronics Letters}
+    author = {Trinh, Q.K. and Fan, Pingzhi},
+    year = {2008},
+    month = {11},
+    pages = {1250 - 1252},
+    title = {Construction of multilevel Hadamard matrices with small alphabet},
+    volume = {44},
+    booktitle = {Electronics Letters}
 }
 
 @article{DecodingHamming2006Eherenborg,
- ISSN = {10724117, 19476213},
- URL = {http://www.jstor.org/stable/25678619},
- author = {Richard Ehrenborg},
- journal = {Math Horizons},
- number = {4},
- pages = {16-17},
- publisher = {Mathematical Association of America},
- title = {Decoding the Hamming Code},
- volume = {13},
- year = {2006}
+    ISSN = {10724117, 19476213},
+    URL = {http://www.jstor.org/stable/25678619},
+    author = {Richard Ehrenborg},
+    journal = {Math Horizons},
+    number = {4},
+    pages = {16-17},
+    publisher = {Mathematical Association of America},
+    title = {Decoding the Hamming Code},
+    volume = {13},
+    year = {2006}
+}
+
+@misc{PEPDocstrings2014Goodger,
+    title = {PEP 257: Docstring conventions},
+    author = {David Goodger and  Guido van Rossum},
+    year = {2014},
+    howpublished = {PEP at \textit{https://legacy.python.org/dev/peps/pep-0257}},
+    version = {9b715d8246db}
+}
+
+@article{CRISPRDailymail,
+    author= {{Daily Mail}},
+    title = {{WHAT IS CRISPR-CAS9?}},
+    URL = {http://www.dailymail.co.uk/sciencetech/fb-5151843/WHAT-CRISPR-CAS9.html},
+    year = {2015},
 }
